@@ -16,7 +16,7 @@ enum umwsu_mod_status {
 /* typedef enum umwsu_mod_status (*umwsu_mod_conf_init_t)(void **pmod_conf_data); */
 typedef enum umwsu_mod_status (*umwsu_mod_init_t)(void **pmod_data);
 typedef enum umwsu_mod_status (*umwsu_mod_conf_t)(void *mod_data, const char *key, const char *value);
-typedef enum umwsu_scan_status (*umwsu_mod_scan)(const char *path, void *mod_data, char **pmod_report);
+typedef enum umwsu_scan_status (*umwsu_mod_scan_t)(const char *path, const char *mime_type, void *mod_data, char **pmod_report);
 typedef enum umwsu_mod_status (*umwsu_mod_close)(void *mod_data);
 
 #ifdef __cplusplus
